infra/deploy/network.tf
resource "aws_vpc" "main" {
  cidr_block = "10.1.0.0/16"

  tags = {
    Name = "${local.prefix}"
  }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${local.prefix}"
  }
}

resource "aws_route_table" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${local.prefix}"
  }
}
resource "aws_route" "public_internet_access" {
  route_table_id         = aws_route_table.main.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.main.id
}

# resource "aws_subnet" "public_a" {
#   vpc_id                  = aws_vpc.main.id
#   cidr_block              = "10.1.1.0/24"
#   map_public_ip_on_launch = true
#   availability_zone       = "${data.aws_region.current.name}a"
# }
# resource "aws_route_table_association" "public_a" {
#   subnet_id      = aws_subnet.public_a.id
#   route_table_id = aws_route_table.main.id
# }

# resource "aws_subnet" "public_b" {
#   vpc_id                  = aws_vpc.main.id
#   cidr_block              = "10.1.2.0/24"
#   map_public_ip_on_launch = true
#   availability_zone       = "${data.aws_region.current.name}b"
# }
# resource "aws_route_table_association" "public_b" {
#   subnet_id      = aws_subnet.public_b.id
#   route_table_id = aws_route_table.main.id
# }


# resource "aws_subnet" "private_a" {
#   vpc_id            = aws_vpc.main.id
#   cidr_block        = "10.1.10.0/24"
#   availability_zone = "${data.aws_region.current.name}a"
# }

# resource "aws_subnet" "private_b" {
#   vpc_id            = aws_vpc.main.id
#   cidr_block        = "10.1.11.0/24"
#   availability_zone = "${data.aws_region.current.name}b"
# }

# resource "aws_security_group" "endpoint_access" {
#   description = "Access to endpoints"
#   name        = "${local.prefix}-endpoint-access"
#   vpc_id      = aws_vpc.main.id

#   ingress {
#     cidr_blocks = [aws_vpc.main.cidr_block]
#     from_port   = 443
#     to_port     = 443
#     protocol    = "tcp"
#   }
# }

# resource "aws_vpc_endpoint" "ecr" {
#   vpc_id              = aws_vpc.main.id
#   service_name        = "com.amazonaws.${data.aws_region.current.name}.ecr.api"
#   vpc_endpoint_type   = "Interface"
#   private_dns_enabled = true

#   subnet_ids = [aws_subnet.private_a.id, aws_subnet.private_b.id]

#   security_group_ids = [
#     aws_security_group.endpoint_access.id
#   ]
# }

# resource "aws_vpc_endpoint" "dkr" {
#   vpc_id              = aws_vpc.main.id
#   service_name        = "com.amazonaws.${data.aws_region.current.name}.ecr.dkr"
#   vpc_endpoint_type   = "Interface"
#   private_dns_enabled = true

#   subnet_ids = [aws_subnet.private_a.id, aws_subnet.private_b.id]

#   security_group_ids = [
#     aws_security_group.endpoint_access.id
#   ]
# }

# resource "aws_vpc_endpoint" "cloudwatch_logs" {
#   vpc_id              = aws_vpc.main.id
#   service_name        = "com.amazonaws.${data.aws_region.current.name}.logs"
#   vpc_endpoint_type   = "Interface"
#   private_dns_enabled = true

#   subnet_ids = [aws_subnet.private_a.id, aws_subnet.private_b.id]

#   security_group_ids = [
#     aws_security_group.endpoint_access.id
#   ]
# }

# resource "aws_vpc_endpoint" "ssm" {
#   vpc_id              = aws_vpc.main.id
#   service_name        = "com.amazonaws.${data.aws_region.current.name}.ssmmessages"
#   vpc_endpoint_type   = "Interface"
#   private_dns_enabled = true

#   subnet_ids = [aws_subnet.private_a.id, aws_subnet.private_b.id]

#   security_group_ids = [
#     aws_security_group.endpoint_access.id
#   ]
# }

# resource "aws_vpc_endpoint" "s3" {
#   vpc_id            = aws_vpc.main.id
#   service_name      = "com.amazonaws.${data.aws_region.current.name}.s3"
#   vpc_endpoint_type = "Gateway"
#   route_table_ids = [
#     aws_vpc.main.default_route_table_id
#   ]
# }
